# huggingface-datasets_CGL-Dataset

./: CGL-Dataset.py  README.md  pyproject.toml
.github/workflows/: ci.yaml  push_to_hub.yaml
tests/: CGL-Dataset_test.py
